# file_integrity_checker

./: .gitignore  Cargo.toml  README.md  registry.json
src/: cli.rs  hashing.rs  main.rs  registry.rs  verify.rs
tests/: cli_hashing.rs  integration.rs
