[package]
name = "file_integrity_checker"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
